<resources>
    <string name="app_name">ProyectoVideoclub</string>
    <string name="soy_cliente">Soy Cliente</string>
    <string name="soy_trabajador">Soy trabajador</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="el_nombre_de_usuario_o_la_contrase_a_est_n_en_blanco">El nombre de usuario o la contraseña están en blanco</string>
    <string name="dni">DNI</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="rellena_todos_los_campos">Rellena todos los campos</string>
    <string name="has_elegido_no_crear_un_usuario">Has elegido no crear un usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dni_del_usuario">DNI del usuario</string>
    <string name="contrase_a_correcta">Contraseña correcta</string>
    <string name="contrase_a_incorrecta">Contraseña incorrecta</string>
    <string name="filtrar_por_t_tulo">Filtrar por título</string>
    <string name="filtrar_por_director">Filtrar por director</string>
    <string name="filtrar_por_a_o_de_lanzamiento">Filtrar por año de lanzamiento</string>
    <string name="filtrar">Filtrar</string>
    <string name="ver_informaci_n">Ver información</string>
    <string name="no_se_puede_crear_porque_el_usuario_ya_existe">No se puede crear porque el usuario ya existe</string>
    <string name="la_contrase_a_debe_tener_caracteres_especiales_1_y_tener_como_minimo_7_caracteres">La contraseña debe tener caracteres especiales (1) y tener como minimo 7 caracteres</string>
    <string name="has_decidido_no_poner_duracion">Has decidido no poner duracion</string>
    <string name="has_cancelado_el_filtrado">Has cancelado el filtrado</string>
</resources>