<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dni"
        android:id="@+id/DialogDNI"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_completo"
        android:id="@+id/DialogNombre"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_de_usuario"
        android:id="@+id/DialogNombreUsu"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:id="@+id/DialogPass"
        android:inputType="textPassword"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        />

</LinearLayout>